--- a/notebooks/03_ext_journals.ipynb
+++ b/notebooks/03_ext_journals.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cfd1ca8b",
    "metadata": {},
    "source": [
     "# <a id='toc1_'></a>[Scimago Journal & Country Rank](#toc0_)\n",
-    "In this notebook, I leverage CSV files downloaded from the Scimagojr website https://www.scimagojr.com/ to compile a list of Journals for neuroscience publications with an impact index.\n",
-    "\n",
-    "![SJR.PNG](attachment:SJR.PNG)"
+    "In this notebook, I leverage CSV files downloaded from the Scimagojr website https://www.scimagojr.com/ to compile a list of Journals for neuroscience publications with an impact index."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bf0b73ed",
    "metadata": {},
    "source": [
     "**Table of contents**<a id='toc0_'></a>    \n",
@@ -57,7 +53,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab366bf0",
    "metadata": {},
    "source": [
     "### <a id='toc1_1_1_'></a>[Open the Tables from Scimago](#toc0_)"
@@ -121,7 +116,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7eea57d",
    "metadata": {},
    "source": [
     "### <a id='toc1_1_2_'></a>[Define the number of articles per journal](#toc0_)\n",
@@ -341,7 +335,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62b3b6a4",
    "metadata": {},
    "source": [
     "### <a id='toc1_1_3_'></a>[Save the dataframes](#toc0_)"
