--- a/notebooks/05_trans_load_journals.ipynb
+++ b/notebooks/05_trans_load_journals.ipynb
@@ -2,19 +2,41 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e667e0a9",
    "metadata": {},
    "source": [
     "# <a id='toc1_'></a>[journals](#toc0_)\n",
-    "In this notebook, a 'journals' table was created for the database, including various information about the journals and some statistical data obtained from SJR."
+    "In this notebook, the `journals` table was created for the database, including various information about the journals and some statistical data obtained from SJR."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "02ed5638",
    "metadata": {},
    "source": [
-    "INDEX"
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [journals](#toc1_)    \n",
+    "    - [Open the documents](#toc1_1_1_)    \n",
+    "    - [Create a table of journals with the journals of this list](#toc1_1_2_)    \n",
+    "    - [Enrich the table with information from the scimago tables](#toc1_1_3_)    \n",
+    "      - [Enrich with the info of the Journals](#toc1_1_3_1_)    \n",
+    "      - [Enrich with the stats of the journals [2010 - 2022]](#toc1_1_3_2_)    \n",
+    "    - [Manage NaN Values](#toc1_1_4_)    \n",
+    "      - [Quartiles](#toc1_1_4_1_)    \n",
+    "      - [rank, docs and other numeric columns](#toc1_1_4_2_)    \n",
+    "      - [Other NaNs](#toc1_1_4_3_)    \n",
+    "      - [Check NaN absence](#toc1_1_4_4_)    \n",
+    "    - [Include Foreign Key: country_id](#toc1_1_5_)    \n",
+    "    - [Rename columns](#toc1_1_6_)    \n",
+    "    - [Order columns](#toc1_1_7_)    \n",
+    "    - [Export the df as .csv](#toc1_1_8_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
   {
@@ -39,7 +61,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e02ec976",
    "metadata": {},
    "source": [
     "### <a id='toc1_1_1_'></a>[Open the documents](#toc0_)"
@@ -62,7 +83,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c70b4dc",
    "metadata": {},
    "source": [
     "### <a id='toc1_1_2_'></a>[Create a table of journals with the journals of this list](#toc0_)"
@@ -145,7 +165,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9fb1f55",
    "metadata": {},
    "source": [
     "### <a id='toc1_1_3_'></a>[Enrich the table with information from the scimago tables](#toc0_)"
@@ -291,7 +310,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25327f8d",
    "metadata": {},
    "source": [
     "#### <a id='toc1_1_3_1_'></a>[Enrich with the info of the Journals](#toc0_)"
@@ -372,10 +390,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adb3963d",
    "metadata": {},
    "source": [
-    "#### <a id='toc1_1_3_2_'></a>[Enrich with the stats of the journals [2010 - 2022]](#toc0_)"
+    "#### <a id='toc1_1_3_2_'></a>[Enrich with the stats of the journals [2010 - 2022]](#toc0_) [&#8593;](#toc0_)"
    ]
   },
   {
@@ -543,7 +560,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbc58247",
    "metadata": {},
    "source": [
     "### <a id='toc1_1_4_'></a>[Manage NaN Values](#toc0_)"
@@ -574,7 +590,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d459b5f",
    "metadata": {},
    "source": [
     "#### <a id='toc1_1_4_1_'></a>[Quartiles](#toc0_)"
@@ -635,7 +650,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc67119f",
    "metadata": {},
    "source": [
     "#### <a id='toc1_1_4_2_'></a>[rank, docs and other numeric columns](#toc0_)"
@@ -707,7 +721,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0aaa49e",
    "metadata": {},
    "source": [
     "#### <a id='toc1_1_4_3_'></a>[Other NaNs](#toc0_)"
@@ -772,7 +785,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d4ab8e9",
    "metadata": {},
    "source": [
     "#### <a id='toc1_1_4_4_'></a>[Check NaN absence](#toc0_)"
@@ -803,10 +815,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8bbd9e2",
    "metadata": {},
    "source": [
-    "### Include Foreign Key: country_id"
+    "### <a id='toc1_1_5_'></a>[Include Foreign Key: country_id](#toc0_)"
    ]
   },
   {
@@ -1082,10 +1093,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3c7788f",
    "metadata": {},
    "source": [
-    "### Rename columns"
+    "### <a id='toc1_1_6_'></a>[Rename columns](#toc0_)"
    ]
   },
   {
@@ -1104,10 +1114,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d8296f8",
    "metadata": {},
    "source": [
-    "### Order columns"
+    "### <a id='toc1_1_7_'></a>[Order columns](#toc0_)"
    ]
   },
   {
@@ -1156,10 +1165,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87656901",
    "metadata": {},
    "source": [
-    "### Export the df as .csv"
+    "### <a id='toc1_1_8_'></a>[Export the df as .csv](#toc0_)"
    ]
   },
   {
@@ -1171,143 +1179,6 @@
    "source": [
     "journals.to_csv('../data/neuropapers_db/journals.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b26668bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f5fae90",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "549d27d8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "02effb66",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "journals = pd.read_csv('../data/neuropapers_db/journals.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "6b49f097",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "journals['country_id'] = journals['country_id'].astype('int64')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "83e758ed",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 110 entries, 0 to 109\n",
-      "Data columns (total 61 columns):\n",
-      " #   Column         Non-Null Count  Dtype  \n",
-      "---  ------         --------------  -----  \n",
-      " 0   journal_id     110 non-null    int64  \n",
-      " 1   country_id     110 non-null    int64  \n",
-      " 2   journal_name   110 non-null    object \n",
-      " 3   num_articles   110 non-null    int64  \n",
-      " 4   region         110 non-null    object \n",
-      " 5   publisher      110 non-null    object \n",
-      " 6   coverage       110 non-null    object \n",
-      " 7   categories     110 non-null    object \n",
-      " 8   areas          110 non-null    object \n",
-      " 9   sjr_2010       110 non-null    object \n",
-      " 10  quartile_2010  110 non-null    object \n",
-      " 11  hindex_2010    110 non-null    float64\n",
-      " 12  docs_2010      110 non-null    float64\n",
-      " 13  sjr_2011       110 non-null    object \n",
-      " 14  quartile_2011  110 non-null    object \n",
-      " 15  hindex_2011    110 non-null    float64\n",
-      " 16  docs_2011      110 non-null    float64\n",
-      " 17  sjr_2012       110 non-null    object \n",
-      " 18  quartile_2012  110 non-null    object \n",
-      " 19  hindex_2012    110 non-null    float64\n",
-      " 20  docs_2012      110 non-null    float64\n",
-      " 21  sjr_2013       110 non-null    object \n",
-      " 22  quartile_2013  110 non-null    object \n",
-      " 23  hindex_2013    110 non-null    float64\n",
-      " 24  docs_2013      110 non-null    float64\n",
-      " 25  sjr_2014       110 non-null    object \n",
-      " 26  quartile_2014  110 non-null    object \n",
-      " 27  hindex_2014    110 non-null    float64\n",
-      " 28  docs_2014      110 non-null    float64\n",
-      " 29  sjr_2015       110 non-null    object \n",
-      " 30  quartile_2015  110 non-null    object \n",
-      " 31  hindex_2015    110 non-null    float64\n",
-      " 32  docs_2015      110 non-null    float64\n",
-      " 33  sjr_2016       110 non-null    object \n",
-      " 34  quartile_2016  110 non-null    object \n",
-      " 35  hindex_2016    110 non-null    float64\n",
-      " 36  docs_2016      110 non-null    float64\n",
-      " 37  sjr_2017       110 non-null    object \n",
-      " 38  quartile_2017  110 non-null    object \n",
-      " 39  hindex_2017    110 non-null    float64\n",
-      " 40  docs_2017      110 non-null    float64\n",
-      " 41  sjr_2018       110 non-null    object \n",
-      " 42  quartile_2018  110 non-null    object \n",
-      " 43  hindex_2018    110 non-null    float64\n",
-      " 44  docs_2018      110 non-null    float64\n",
-      " 45  sjr_2019       110 non-null    object \n",
-      " 46  quartile_2019  110 non-null    object \n",
-      " 47  hindex_2019    110 non-null    float64\n",
-      " 48  docs_2019      110 non-null    float64\n",
-      " 49  sjr_2020       110 non-null    object \n",
-      " 50  quartile_2020  110 non-null    object \n",
-      " 51  hindex_2020    110 non-null    float64\n",
-      " 52  docs_2020      110 non-null    float64\n",
-      " 53  sjr_2021       110 non-null    object \n",
-      " 54  quartile_2021  110 non-null    object \n",
-      " 55  hindex_2021    110 non-null    float64\n",
-      " 56  docs_2021      110 non-null    float64\n",
-      " 57  sjr_2022       110 non-null    object \n",
-      " 58  quartile_2022  110 non-null    object \n",
-      " 59  hindex_2022    110 non-null    float64\n",
-      " 60  docs_2022      110 non-null    float64\n",
-      "dtypes: float64(26), int64(3), object(32)\n",
-      "memory usage: 52.6+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "journals.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8a282a8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
