--- a/notebooks/07_load_publications.ipynb
+++ b/notebooks/07_load_publications.ipynb
@@ -2,18 +2,43 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5928ee21",
    "metadata": {},
    "source": [
-    "# publications"
+    "# <a id='toc1_'></a>[publications](#toc0_)\n",
+    "\n",
+    "In this notebook, the `publications` table was created for the database, including various information about the publications from PubMed."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "81bd29bc",
    "metadata": {},
    "source": [
-    "INDEX"
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [publications](#toc1_)    \n",
+    "    - [Import publications_df](#toc1_1_1_)    \n",
+    "    - [EDA](#toc1_1_2_)    \n",
+    "    - [Protocol for Data Cleansing](#toc1_1_3_)    \n",
+    "    - [Create a column 'publication_year'](#toc1_1_4_)    \n",
+    "    - [last_revision & publication_date to datetime](#toc1_1_5_)    \n",
+    "      - [last_revision](#toc1_1_5_1_)    \n",
+    "      - [publication_date](#toc1_1_5_2_)    \n",
+    "    - [Convert object columns to lists](#toc1_1_6_)    \n",
+    "    - [Convert pub_type to categories](#toc1_1_7_)    \n",
+    "    - [Prepare the column for the foreign key: journal_id](#toc1_1_8_)    \n",
+    "    - [Manage NaNs](#toc1_1_9_)    \n",
+    "    - [Check the changes](#toc1_1_10_)    \n",
+    "    - [Drop Columns](#toc1_1_11_)    \n",
+    "    - [Change the order of the columns](#toc1_1_12_)    \n",
+    "    - [Export as .csv](#toc1_1_13_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
   {
@@ -37,10 +62,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59a64672",
    "metadata": {},
    "source": [
-    "### Import publications_df"
+    "### <a id='toc1_1_1_'></a>[Import publications_df](#toc0_)"
    ]
   },
   {
@@ -109,10 +133,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef3c8b76",
    "metadata": {},
    "source": [
-    "### EDA"
+    "### <a id='toc1_1_2_'></a>[EDA](#toc0_)"
    ]
   },
   {
@@ -292,10 +315,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59181510",
    "metadata": {},
    "source": [
-    "### Protocol for Data Cleansing\n",
+    "### <a id='toc1_1_3_'></a>[Protocol for Data Cleansing](#toc0_)\n",
     "\n",
     "     0   pub_id            61981 non-null  int64  \n",
     "     1   last_revision     61981 non-null  float64 --> datetime\n",
@@ -316,10 +338,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f98aa5ab",
    "metadata": {},
    "source": [
-    "### Create a column 'publication_year'"
+    "### <a id='toc1_1_4_'></a>[Create a column 'publication_year'](#toc0_)"
    ]
   },
   {
@@ -387,10 +408,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "658b0c61",
    "metadata": {},
    "source": [
-    "### last_revision & publication_date to datetime"
+    "### <a id='toc1_1_5_'></a>[last_revision & publication_date to datetime](#toc0_)"
    ]
   },
   {
@@ -482,10 +502,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a0f1011",
    "metadata": {},
    "source": [
-    "#### last_revision"
+    "#### <a id='toc1_1_5_1_'></a>[last_revision](#toc0_)"
    ]
   },
   {
@@ -510,10 +529,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79482fa7",
    "metadata": {},
    "source": [
-    "#### publication_date"
+    "#### <a id='toc1_1_5_2_'></a>[publication_date](#toc0_)"
    ]
   },
   {
@@ -567,10 +585,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8df4c147",
    "metadata": {},
    "source": [
-    "### Convert object columns to lists\n",
+    "### <a id='toc1_1_6_'></a>[Convert object columns to lists](#toc0_)\n",
     "     7   authors           61981 non-null  object  --> list\n",
     "     11  keywords          61981 non-null  object  --> list\n",
     "     12  terms             61981 non-null  object  --> list"
@@ -612,10 +629,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d9d4229",
    "metadata": {},
    "source": [
-    "### Convert pub_type to categories\n",
+    "### <a id='toc1_1_7_'></a>[Convert pub_type to categories](#toc0_)\n",
     "    13  pub_type          61981 non-null  object  --> categories"
    ]
   },
@@ -677,10 +693,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b9e5985",
    "metadata": {},
    "source": [
-    "### Prepare the column for the foreign key: journal_id\n",
+    "### <a id='toc1_1_8_'></a>[Prepare the column for the foreign key: journal_id](#toc0_)\n",
     "    8   journal           61981 non-null  object  --> journal_id"
    ]
   },
@@ -944,10 +959,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "309cebed",
    "metadata": {},
    "source": [
-    "### Manage NaNs\n",
+    "### <a id='toc1_1_9_'></a>[Manage NaNs](#toc0_)\n",
     "     2   volume            61591 non-null  float64 --> fillna(0) --> int64"
    ]
   },
@@ -1081,10 +1095,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a648471a",
    "metadata": {},
    "source": [
-    "### Check the changes"
+    "### <a id='toc1_1_10_'></a>[Check the changes](#toc0_)"
    ]
   },
   {
@@ -1177,10 +1190,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c28e6d3",
    "metadata": {},
    "source": [
-    "### Drop Columns"
+    "### <a id='toc1_1_11_'></a>[Drop Columns](#toc0_)"
    ]
   },
   {
@@ -1242,10 +1254,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d6cb0e0",
    "metadata": {},
    "source": [
-    "### Change the order of the columns"
+    "### <a id='toc1_1_12_'></a>[Change the order of the columns](#toc0_)"
    ]
   },
   {
@@ -1286,10 +1297,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58372e09",
    "metadata": {},
    "source": [
-    "### Export as .csv"
+    "### <a id='toc1_1_13_'></a>[Export as .csv](#toc0_)"
    ]
   },
   {
@@ -1300,218 +1310,6 @@
    "outputs": [],
    "source": [
     "publications.to_csv('../data/neuropapers_db/publications.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ce887c9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47d3209e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58602315",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "13c03416",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "publications = pd.read_csv('../data/neuropapers_db/publications.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ce152c8d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pub_id</th>\n",
-       "      <th>journal_id</th>\n",
-       "      <th>last_revision</th>\n",
-       "      <th>volume</th>\n",
-       "      <th>title</th>\n",
-       "      <th>pages</th>\n",
-       "      <th>DOI</th>\n",
-       "      <th>authors</th>\n",
-       "      <th>journal</th>\n",
-       "      <th>abstract</th>\n",
-       "      <th>abstract_words</th>\n",
-       "      <th>keywords</th>\n",
-       "      <th>terms</th>\n",
-       "      <th>pub_type</th>\n",
-       "      <th>citation</th>\n",
-       "      <th>publication_year</th>\n",
-       "      <th>pub_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5507</th>\n",
-       "      <td>36382899</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2022-12-21</td>\n",
-       "      <td>128.0</td>\n",
-       "      <td>The brain landscape of the two-hit model of po...</td>\n",
-       "      <td>1617-1624</td>\n",
-       "      <td>10.1152/jn.00340.2022</td>\n",
-       "      <td>['James, Lisa M', 'Engdahl, Brian E', 'Christo...</td>\n",
-       "      <td>Journal of neurophysiology</td>\n",
-       "      <td>The neurophysiological mechanisms underlying t...</td>\n",
-       "      <td>neurophysiological mechanisms underlying devel...</td>\n",
-       "      <td>['neurophysiological', 'mechanisms', 'underlyi...</td>\n",
-       "      <td>['functional magnetic resonance imaging', 'hyp...</td>\n",
-       "      <td>Journal Article</td>\n",
-       "      <td>J Neurophysiol. 2022 Dec 1;128(6):1617-1624. d...</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2022-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43813</th>\n",
-       "      <td>36382899</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2023-12-02</td>\n",
-       "      <td>128.0</td>\n",
-       "      <td>The brain landscape of the two-hit model of po...</td>\n",
-       "      <td>1617-1624</td>\n",
-       "      <td>10.1152/jn.00340.2022</td>\n",
-       "      <td>['James, Lisa M', 'Engdahl, Brian E', 'Christo...</td>\n",
-       "      <td>Journal of neurophysiology</td>\n",
-       "      <td>The neurophysiological mechanisms underlying t...</td>\n",
-       "      <td>neurophysiological mechanisms underlying devel...</td>\n",
-       "      <td>['neurophysiological', 'mechanisms', 'underlyi...</td>\n",
-       "      <td>['functional magnetic resonance imaging', 'hyp...</td>\n",
-       "      <td>Journal Article</td>\n",
-       "      <td>J Neurophysiol. 2022 Dec 1;128(6):1617-1624. d...</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2022-01-01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         pub_id  journal_id last_revision  volume  \\\n",
-       "5507   36382899           5    2022-12-21   128.0   \n",
-       "43813  36382899           5    2023-12-02   128.0   \n",
-       "\n",
-       "                                                   title      pages  \\\n",
-       "5507   The brain landscape of the two-hit model of po...  1617-1624   \n",
-       "43813  The brain landscape of the two-hit model of po...  1617-1624   \n",
-       "\n",
-       "                         DOI  \\\n",
-       "5507   10.1152/jn.00340.2022   \n",
-       "43813  10.1152/jn.00340.2022   \n",
-       "\n",
-       "                                                 authors  \\\n",
-       "5507   ['James, Lisa M', 'Engdahl, Brian E', 'Christo...   \n",
-       "43813  ['James, Lisa M', 'Engdahl, Brian E', 'Christo...   \n",
-       "\n",
-       "                          journal  \\\n",
-       "5507   Journal of neurophysiology   \n",
-       "43813  Journal of neurophysiology   \n",
-       "\n",
-       "                                                abstract  \\\n",
-       "5507   The neurophysiological mechanisms underlying t...   \n",
-       "43813  The neurophysiological mechanisms underlying t...   \n",
-       "\n",
-       "                                          abstract_words  \\\n",
-       "5507   neurophysiological mechanisms underlying devel...   \n",
-       "43813  neurophysiological mechanisms underlying devel...   \n",
-       "\n",
-       "                                                keywords  \\\n",
-       "5507   ['neurophysiological', 'mechanisms', 'underlyi...   \n",
-       "43813  ['neurophysiological', 'mechanisms', 'underlyi...   \n",
-       "\n",
-       "                                                   terms         pub_type  \\\n",
-       "5507   ['functional magnetic resonance imaging', 'hyp...  Journal Article   \n",
-       "43813  ['functional magnetic resonance imaging', 'hyp...  Journal Article   \n",
-       "\n",
-       "                                                citation  publication_year  \\\n",
-       "5507   J Neurophysiol. 2022 Dec 1;128(6):1617-1624. d...              2022   \n",
-       "43813  J Neurophysiol. 2022 Dec 1;128(6):1617-1624. d...              2022   \n",
-       "\n",
-       "         pub_date  \n",
-       "5507   2022-01-01  \n",
-       "43813  2022-01-01  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "publications[publications['pub_id'] == 36382899]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "881c73f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(61981, 17)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(61945, 17)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "display(publications.shape)\n",
-    "publications = publications.drop_duplicates(subset=['pub_id'])\n",
-    "publications.shape"
    ]
   },
   {
