--- a/notebooks/08_load_researchers.ipynb
+++ b/notebooks/08_load_researchers.ipynb
@@ -2,18 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5126108a",
    "metadata": {},
    "source": [
-    "# researchers"
+    "# <a id='toc1_'></a>[researchers](#toc0_)\n",
+    "\n",
+    "In this notebook, the `researchers` table was created for the database, including various information about the researchers from pubmed enriched with the gender and its probability from `genderize` API."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3470d7e6",
    "metadata": {},
    "source": [
-    "INDEX"
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [researchers](#toc1_)    \n",
+    "    - [Import researchers_df](#toc1_1_1_)    \n",
+    "  - [Data Cleansing](#toc1_2_)    \n",
+    "    - [Create a df of researchers](#toc1_2_1_)    \n",
+    "    - [Create the researchers ID: res_id](#toc1_2_2_)    \n",
+    "    - [Consider identifying the gender of the author based on their name, recognizing that this method may not always accurately reflect personal gender identity. Exercise sensitivity and be aware of the potential for inaccuracies in the process](#toc1_2_3_)    \n",
+    "    - [Include the gender columns](#toc1_2_4_)    \n",
+    "      - [Concatenate vertically all the files from the extraction](#toc1_2_4_1_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
   {
@@ -47,10 +64,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "292ff97a",
    "metadata": {},
    "source": [
-    "### Import researchers_df"
+    "### <a id='toc1_1_1_'></a>[Import researchers_df](#toc0_)"
    ]
   },
   {
@@ -154,10 +170,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08fd3e45",
    "metadata": {},
    "source": [
-    "## Data Cleansing"
+    "## <a id='toc1_2_'></a>[Data Cleansing](#toc0_)"
    ]
   },
   {
@@ -300,10 +315,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80752f10",
    "metadata": {},
    "source": [
-    "### Create a df of researchers"
+    "### <a id='toc1_2_1_'></a>[Create a df of researchers](#toc0_)"
    ]
   },
   {
@@ -466,10 +480,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "713d1df2",
    "metadata": {},
    "source": [
-    "### Create the researchers ID: res_id"
+    "### <a id='toc1_2_2_'></a>[Create the researchers ID: res_id](#toc0_)"
    ]
   },
   {
@@ -777,10 +790,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b49e073f",
    "metadata": {},
    "source": [
-    "### Consider identifying the gender of the author based on their name, recognizing that this method may not always accurately reflect personal gender identity. Exercise sensitivity and be aware of the potential for inaccuracies in the process\n",
+    "### <a id='toc1_2_3_'></a>[Consider identifying the gender of the author based on their name, recognizing that this method may not always accurately reflect personal gender identity. Exercise sensitivity and be aware of the potential for inaccuracies in the process](#toc0_)\n",
     "\n",
     "**genderize.io** is a free API, but limited at 1000 requests by day.\n",
     "\n",
@@ -958,11 +970,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70c1c029",
    "metadata": {},
    "source": [
-    "### Include the gender columns\n",
-    "#### Concatenate vertically all the files from the extraction"
+    "### <a id='toc1_2_4_'></a>[Include the gender columns](#toc0_)\n",
+    "#### <a id='toc1_2_4_1_'></a>[Concatenate vertically all the files from the extraction](#toc0_)"
    ]
   },
   {
@@ -1510,156 +1521,6 @@
    "outputs": [],
    "source": [
     "researchers_df.to_csv('../data/neuropapers_db/researchers.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39cce68d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d2211c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7156d13",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "e691e796",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "researchers_df = pd.read_csv('../data/neuropapers_db/researchers.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "723074bb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "res_id        0\n",
-       "researcher    0\n",
-       "surname       0\n",
-       "name          0\n",
-       "gender        0\n",
-       "prob          0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "researchers_df.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "14c4c7e2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>res_id</th>\n",
-       "      <th>researcher</th>\n",
-       "      <th>surname</th>\n",
-       "      <th>name</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>prob</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [res_id, researcher, surname, name, gender, prob]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "researchers_df[researchers_df['name'].isna()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "id": "01d51b3e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "male       131456\n",
-       "female      86676\n",
-       "unknown     10766\n",
-       "Name: gender, dtype: int64"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "researchers_df['gender'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "d88d308c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "researchers_df['name'].fillna(researchers_df['surname'], inplace=True)"
    ]
   },
   {
