--- a/notebooks/09_load_affiliations.ipynb
+++ b/notebooks/09_load_affiliations.ipynb
@@ -2,18 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ae5cec13",
    "metadata": {},
    "source": [
-    "# affiliations"
+    "# <a id='toc1_'></a>[affiliations](#toc0_)\n",
+    "\n",
+    "In this notebook, the `affiliations` table was created for the database, including various information about the affiliations from pubmed enriched with geographical coordenates obtained with the `Geolocation` API from Google Maps."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "721b4ef1",
    "metadata": {},
    "source": [
-    "INDEX"
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [affiliations](#toc1_)    \n",
+    "    - [Import affiliations_df](#toc1_1_1_)    \n",
+    "  - [Data Cleansing](#toc1_2_)    \n",
+    "    - [Create a list of affiliations](#toc1_2_1_)    \n",
+    "  - [Determine the geographical locations of the affiliations](#toc1_3_)    \n",
+    "      - [Manage NaNs](#toc1_3_1_1_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
   {
@@ -41,10 +56,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfb02f75",
    "metadata": {},
    "source": [
-    "### Import affiliations_df"
+    "### <a id='toc1_1_1_'></a>[Import affiliations_df](#toc0_)"
    ]
   },
   {
@@ -135,10 +149,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "263aa6b1",
    "metadata": {},
    "source": [
-    "## Data Cleansing"
+    "## <a id='toc1_2_'></a>[Data Cleansing](#toc0_)"
    ]
   },
   {
@@ -268,10 +281,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "536767bf",
    "metadata": {},
    "source": [
-    "### Create a list of affiliations"
+    "### <a id='toc1_2_1_'></a>[Create a list of affiliations](#toc0_)"
    ]
   },
   {
@@ -559,10 +571,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "011a0a96",
    "metadata": {},
    "source": [
-    "## Determine the geographical locations of the affiliations"
+    "## <a id='toc1_3_'></a>[Determine the geographical locations of the affiliations](#toc0_)"
    ]
   },
   {
@@ -643,10 +654,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deaf7cf4",
    "metadata": {},
    "source": [
-    "#### Manage NaNs"
+    "#### <a id='toc1_3_1_1_'></a>[Manage NaNs](#toc0_)"
    ]
   },
   {
@@ -859,56 +869,6 @@
    "outputs": [],
    "source": [
     "aff_df.to_csv('../data/neuropapers_db/affiliations.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85f149a8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "168237a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.set_option('display.max_colwidth', None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "8f4e9f40",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0           The fourth affiliated hospital, Harbin Medical University, Harbin, Heilongjiang \n",
-       "1                                 Department of Biology, University of Padova, Padua, Italy.\n",
-       "2         Department of Clinical Sciences and Community Health, University of Milan, Milan, \n",
-       "3                          Department of Biostatistics, Erciyes University, Kayseri, Turkey.\n",
-       "4                 Department of Microbiology, Immunology and Transplantation, Laboratory of \n",
-       "                                                 ...                                        \n",
-       "133863      Buddhist Practices and Counselling Science Lab, Centre of Buddhist Studies, The \n",
-       "133864       Cardiovascular Research Institute, University of California San Francisco, San \n",
-       "133865      School of Education, Victoria University of Wellington, Wellington, New Zealand.\n",
-       "133866           CNRS, UMR 7232, BIOM, Observatoire Océanologique, Banyuls-sur-Mer, France; \n",
-       "133867        Department of Ophthalmology, Flinders Medical Center and Flinders University, \n",
-       "Name: affiliation_names, Length: 133194, dtype: object"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aff_df['affiliation_names']"
    ]
   },
   {
