--- a/notebooks/10_load_intermediary_columns.ipynb
+++ b/notebooks/10_load_intermediary_columns.ipynb
@@ -2,18 +2,40 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "23a01620",
    "metadata": {},
    "source": [
-    "# intermediary tables"
+    "# <a id='toc1_'></a>[intermediary tables](#toc0_)\n",
+    "\n",
+    "In this notebook, four intermediary tables were created for the database: \n",
+    "\n",
+    "    pub_res: pub_id & res_id\n",
+    "    pub-aff: pub_id & aff_id\n",
+    "    jrn-res: journal_id & res_id\n",
+    "    aff-res: aff_id & res_id\n",
+    "    \n",
+    "This is the way to manage the many-to-many relationships of the database neuropapers_db"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e4f8ca69",
    "metadata": {},
    "source": [
-    "INDEX"
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [intermediary tables](#toc1_)    \n",
+    "    - [Import tables](#toc1_1_1_)    \n",
+    "  - [pub-res](#toc1_2_)    \n",
+    "  - [pub-aff](#toc1_3_)    \n",
+    "  - [jrn-res](#toc1_4_)    \n",
+    "  - [aff-res](#toc1_5_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
   {
@@ -36,10 +58,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52617163",
    "metadata": {},
    "source": [
-    "### Import tables"
+    "### <a id='toc1_1_1_'></a>[Import tables](#toc0_)"
    ]
   },
   {
@@ -122,10 +143,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a273f35a",
    "metadata": {},
    "source": [
-    "## pub-res"
+    "## <a id='toc1_2_'></a>[pub-res](#toc0_)"
    ]
   },
   {
@@ -592,10 +612,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "608fbd9f",
    "metadata": {},
    "source": [
-    "## pub-aff"
+    "## <a id='toc1_3_'></a>[pub-aff](#toc0_)"
    ]
   },
   {
@@ -976,10 +995,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5324824c",
    "metadata": {},
    "source": [
-    "## jrn-res"
+    "## <a id='toc1_4_'></a>[jrn-res](#toc0_)"
    ]
   },
   {
@@ -1388,10 +1406,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6951e461",
    "metadata": {},
    "source": [
-    "## aff-res"
+    "## <a id='toc1_5_'></a>[aff-res](#toc0_)"
    ]
   },
   {
