--- a/notebooks/02_ext_load_countries.ipynb
+++ b/notebooks/02_ext_load_countries.ipynb
@@ -2,32 +2,49 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "53f439b8",
    "metadata": {},
    "source": [
-    "# Countries\n",
+    "# <a id='toc1_'></a>[Countries](#toc0_)\n",
     "This notebook will merge country data from two different sources:\n",
     "\n",
     "- Country codes table from Wikipedia.\n",
     "- Data on R+D indices by countries, extracted from OECD\n",
     "\n",
-    "![logo_oecdilibrary.png](attachment:logo_oecdilibrary.png)\n",
-    "\n",
     "OECD © Organisation for Economic Co-operation and Development: https://www.oecd.org/\n",
     "\n",
     "    OECD (2023), Researchers (indicator). doi: 10.1787/20ddfb0f-en (Accessed on 30 November 2023)\n",
     "    \n",
-    "\n",
-    "\n",
     "Wikipedia: https://en.wikipedia.org/wiki/List_of_ISO_3166_country_codes"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8fc4cf79",
    "metadata": {},
    "source": [
-    "INDEX"
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [Countries](#toc1_)    \n",
+    "  - [Country Codes](#toc1_1_)    \n",
+    "      - [Open the data](#toc1_1_1_1_)    \n",
+    "    - [Transform](#toc1_1_2_)    \n",
+    "      - [ Export as .csv](#toc1_1_2_1_)    \n",
+    "  - [OECD Research index](#toc1_2_)    \n",
+    "      - [Open Data](#toc1_2_1_1_)    \n",
+    "      - [Transform Data](#toc1_2_1_2_)    \n",
+    "        - [mln: Million US dollars](#toc1_2_1_2_1_)    \n",
+    "        - [gpd: % of gross domestic spending](#toc1_2_1_2_2_)    \n",
+    "        - [res: number of researchers](#toc1_2_1_2_3_)    \n",
+    "      - [Export Data](#toc1_2_1_3_)    \n",
+    "  - [Merge Data from both sources](#toc1_3_)    \n",
+    "  - [Export as .csv](#toc1_4_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
   {
@@ -47,12 +64,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bb4fb6e",
    "metadata": {},
    "source": [
     "___\n",
-    "## Country Codes\n",
-    "#### Open the data"
+    "## <a id='toc1_1_'></a>[Country Codes](#toc0_)\n",
+    "#### <a id='toc1_1_1_1_'></a>[Open the data](#toc0_)"
    ]
   },
   {
@@ -228,10 +244,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96f2897f",
    "metadata": {},
    "source": [
-    "### Transform"
+    "### <a id='toc1_1_2_'></a>[Transform](#toc0_)"
    ]
   },
   {
@@ -358,10 +373,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afc20ea1",
    "metadata": {},
    "source": [
-    "####  Export as .csv"
+    "#### <a id='toc1_1_2_1_'></a>[ Export as .csv](#toc0_)"
    ]
   },
   {
@@ -376,11 +390,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6c55abf",
    "metadata": {},
    "source": [
     "___\n",
-    "## OECD Research index\n",
+    "## <a id='toc1_2_'></a>[OECD Research index](#toc0_)\n",
     "\n",
     "**Gross domestic spending on R&D**\n",
     "\n",
@@ -390,7 +403,7 @@
     "\n",
     "Researchers are professionals engaged in the conception or creation of new knowledge, products, processes, methods and systems, as well as in the management of the projects concerned. This indicator is measured in per 1 000 people employed and in number of researchers; the data are available as a total and broken down by gender.\n",
     "\n",
-    "#### Open Data"
+    "#### <a id='toc1_2_1_1_'></a>[Open Data](#toc0_)"
    ]
   },
   {
@@ -627,12 +640,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22e57ebe",
    "metadata": {},
    "source": [
-    "#### Transform Data\n",
+    "#### <a id='toc1_2_1_2_'></a>[Transform Data](#toc0_)\n",
     "\n",
-    "##### mln: Million US dollars"
+    "##### <a id='toc1_2_1_2_1_'></a>[mln: Million US dollars](#toc0_)"
    ]
   },
   {
@@ -885,10 +897,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9231dad",
    "metadata": {},
    "source": [
-    "##### gpd: % of gross domestic spending"
+    "##### <a id='toc1_2_1_2_2_'></a>[gpd: % of gross domestic spending](#toc0_)"
    ]
   },
   {
@@ -1131,10 +1142,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06c9228c",
    "metadata": {},
    "source": [
-    "##### res: number of researchers\n",
+    "##### <a id='toc1_2_1_2_3_'></a>[res: number of researchers](#toc0_)\n",
     "Here there are two SUBJECTs:\n",
     "* TOT: Total amount of researchers\n",
     "* WOMEN: Number of women researchers "
@@ -1631,10 +1641,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "665ef3db",
    "metadata": {},
    "source": [
-    "#### Export Data"
+    "#### <a id='toc1_2_1_3_'></a>[Export Data](#toc0_)"
    ]
   },
   {
@@ -1652,11 +1661,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30c3533a",
    "metadata": {},
    "source": [
     "___\n",
-    "## Merge Data from both sources"
+    "## <a id='toc1_3_'></a>[Merge Data from both sources](#toc0_)"
    ]
   },
   {
@@ -2273,10 +2281,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b564b611",
    "metadata": {},
    "source": [
-    "## Export as .csv"
+    "## <a id='toc1_4_'></a>[Export as .csv](#toc0_)"
    ]
   },
   {
