--- a/notebooks/06_trans_pubmed.ipynb
+++ b/notebooks/06_trans_pubmed.ipynb
@@ -2,10 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d1e9ee0e",
    "metadata": {},
    "source": [
-    "# Publication Transformation\n",
+    "# <a id='toc1_'></a>[Publication Transformation](#toc0_)\n",
     "\n",
     "In this notebook, I have gathered all the raw dataframes that I previously obtained from PubMed through web scraping. \n",
     "\n",
@@ -18,19 +17,49 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2a15f7d",
    "metadata": {},
    "source": [
-    "INDEX"
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [Publication Transformation](#toc1_)    \n",
+    "  - [Concatenate all the dataframes vertically](#toc1_1_)    \n",
+    "  - [Divide the data in columns](#toc1_2_)    \n",
+    "        - [Description of the fields](#toc1_2_1_1_1_)    \n",
+    "        - [Example of extracted data](#toc1_2_1_1_2_)    \n",
+    "  - [Data cleansing](#toc1_3_)    \n",
+    "      - ['ID' column](#toc1_3_1_1_)    \n",
+    "      - [Drop constant columns](#toc1_3_1_2_)    \n",
+    "      - [Drop columns](#toc1_3_1_3_)    \n",
+    "    - [Fill NaN values](#toc1_3_2_)    \n",
+    "      - [Merge terms in one column](#toc1_3_2_1_)    \n",
+    "      - [abstract](#toc1_3_2_2_)    \n",
+    "      - [authors](#toc1_3_2_3_)    \n",
+    "      - [DOI](#toc1_3_2_4_)    \n",
+    "      - [pages](#toc1_3_2_5_)    \n",
+    "      - [volume](#toc1_3_2_6_)    \n",
+    "  - [Create a column of the abstract without stopwords](#toc1_4_)    \n",
+    "  - [Create a column of the abstract keywords](#toc1_5_)    \n",
+    "      - [terms](#toc1_5_1_1_)    \n",
+    "  - [Separate the data into groups](#toc1_6_)    \n",
+    "    - [publications](#toc1_6_1_)    \n",
+    "    - [researchers](#toc1_6_2_)    \n",
+    "    - [affiliations](#toc1_6_3_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0497e4f7",
    "metadata": {},
    "source": [
     "___\n",
-    "## Concatenate all the dataframes vertically"
+    "## <a id='toc1_1_'></a>[Concatenate all the dataframes vertically](#toc0_)"
    ]
   },
   {
@@ -187,13 +216,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c64fd9f1",
    "metadata": {},
    "source": [
     "___\n",
-    "## Divide the data in columns\n",
+    "## <a id='toc1_2_'></a>[Divide the data in columns](#toc0_)\n",
     "\n",
-    "##### Description of the fields\n",
+    "##### <a id='toc1_2_1_1_1_'></a>[Description of the fields](#toc0_)\n",
     "    PMID: PubMed Identifier for the article (PubMed unique identifier).\n",
     "    OWN: Ownership or database where the record is held (e.g., NLM for National Library of Medicine).\n",
     "    STAT: Article status (e.g., MEDLINE).\n",
@@ -232,7 +260,7 @@
     "    PST: Publication Status.\n",
     "    SO: Source (e.g., Journal citation with title, volume, and page).\n",
     "    \n",
-    "##### Example of extracted data\n",
+    "##### <a id='toc1_2_1_1_2_'></a>[Example of extracted data](#toc0_)\n",
     "'PMID- 37815691\\nOWN - NLM\\nSTAT- MEDLINE\\nDCOM- 20231121\\nLR  - 20231123\\nIS  - 1995-8218 (Electronic)\\nIS  - 1673-7067 (Print)\\nIS  - 1995-8218 (Linking)\\nVI  - 39\\nIP  - 12\\nDP  - 2023 Dec\\nTI  - Propofol Brings on the Light for Depression Therapy.\\nPG  - 1891-1894\\nLID - 10.1007/s12264-023-01133-7 [doi]\\nFAU - Yan, Yun\\nAU  - Yan Y\\nAUID- ORCID: 0000-0002-9993-4959\\nAD  - Department of Anesthesiology, China-Japan Friendship Hospital, Chinese Academy of \\n      Medical Sciences and Peking Union Medical College, Beijing, 100029, China.\\nFAU - Ma, Hongli\\nAU  - Ma H\\nAUID- ORCID: 0000-0001-8925-1372\\nAD  - Department of Anesthesiology, China-Japan Friendship Hospital, Chinese Academy of \\n      Medical Sciences and Peking Union Medical College, Beijing, 100029, China.\\nFAU - Zhao, Jing\\nAU  - Zhao J\\nAUID- ORCID: 0000-0002-4640-2609\\nAD  - Department of Anesthesiology, China-Japan Friendship Hospital, Chinese Academy of \\n      Medical Sciences and Peking Union Medical College, Beijing, 100029, China. \\n      zhaojing1009@aliyun.com.\\nLA  - eng\\nPT  - Journal Article\\nDEP - 20231010\\nPL  - Singapore\\nTA  - Neurosci Bull\\nJT  - Neuroscience bulletin\\nJID - 101256850\\nRN  - YI7VU623SF (Propofol)\\nSB  - IM\\nMH  - *Propofol/therapeutic use\\nMH  - Depression/drug therapy\\nPMC - PMC10661581\\nCOIS- The authors declare that there are no conflicts of interest.\\nEDAT- 2023/10/10 12:43\\nMHDA- 2023/11/21 06:43\\nPMCR- 2024/12/01\\nCRDT- 2023/10/10 11:11\\nPHST- 2023/04/11 00:00 [received]\\nPHST- 2023/08/22 00:00 [accepted]\\nPHST- 2024/12/01 00:00 [pmc-release]\\nPHST- 2023/11/21 06:43 [medline]\\nPHST- 2023/10/10 12:43 [pubmed]\\nPHST- 2023/10/10 11:11 [entrez]\\nAID - 10.1007/s12264-023-01133-7 [pii]\\nAID - 1133 [pii]\\nAID - 10.1007/s12264-023-01133-7 [doi]\\nPST - ppublish\\nSO  - Neurosci Bull. 2023 Dec;39(12):1891-1894. doi: 10.1007/s12264-023-01133-7. Epub \\n      2023 Oct 10.'"
    ]
   },
@@ -271,11 +299,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a18fa595",
    "metadata": {},
    "source": [
     "___\n",
-    "## Data cleansing"
+    "## <a id='toc1_3_'></a>[Data cleansing](#toc0_)"
    ]
   },
   {
@@ -387,10 +414,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92a51513",
    "metadata": {},
    "source": [
-    "#### 'ID' column"
+    "#### <a id='toc1_3_1_1_'></a>['ID' column](#toc0_)"
    ]
   },
   {
@@ -452,10 +478,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca6b4352",
    "metadata": {},
    "source": [
-    "#### Drop constant columns"
+    "#### <a id='toc1_3_1_2_'></a>[Drop constant columns](#toc0_)"
    ]
   },
   {
@@ -512,10 +537,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31e5e8f1",
    "metadata": {},
    "source": [
-    "#### Drop columns"
+    "#### <a id='toc1_3_1_3_'></a>[Drop columns](#toc0_)"
    ]
   },
   {
@@ -707,12 +731,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26482706",
    "metadata": {},
    "source": [
     "___\n",
-    "### Fill NaN values\n",
-    "#### Merge terms in one column"
+    "### <a id='toc1_3_2_'></a>[Fill NaN values](#toc0_)\n",
+    "#### <a id='toc1_3_2_1_'></a>[Merge terms in one column](#toc0_)"
    ]
   },
   {
@@ -829,10 +852,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "480e3870",
    "metadata": {},
    "source": [
-    "#### abstract"
+    "#### <a id='toc1_3_2_2_'></a>[abstract](#toc0_)"
    ]
   },
   {
@@ -894,10 +916,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6d3e1c3",
    "metadata": {},
    "source": [
-    "#### authors"
+    "#### <a id='toc1_3_2_3_'></a>[authors](#toc0_)"
    ]
   },
   {
@@ -959,10 +980,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbcb89bf",
    "metadata": {},
    "source": [
-    "#### DOI"
+    "#### <a id='toc1_3_2_4_'></a>[DOI](#toc0_)"
    ]
   },
   {
@@ -1060,10 +1080,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cf44c88",
    "metadata": {},
    "source": [
-    "#### pages"
+    "#### <a id='toc1_3_2_5_'></a>[pages](#toc0_)"
    ]
   },
   {
@@ -1149,10 +1168,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eda0f89",
    "metadata": {},
    "source": [
-    "#### volume"
+    "#### <a id='toc1_3_2_6_'></a>[volume](#toc0_)"
    ]
   },
   {
@@ -1209,10 +1227,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4caa0583",
    "metadata": {},
    "source": [
-    "## Create a column of the abstract without stopwords"
+    "## <a id='toc1_4_'></a>[Create a column of the abstract without stopwords](#toc0_)"
    ]
   },
   {
@@ -1290,10 +1307,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53df0ff0",
    "metadata": {},
    "source": [
-    "## Create a column of the abstract keywords"
+    "## <a id='toc1_5_'></a>[Create a column of the abstract keywords](#toc0_)"
    ]
   },
   {
@@ -1334,10 +1350,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d89b531",
    "metadata": {},
    "source": [
-    "#### terms\n",
+    "#### <a id='toc1_5_1_1_'></a>[terms](#toc0_)\n",
     "Here, the idea is to fill the terms with the most common words of the abstract,"
    ]
   },
@@ -1354,11 +1369,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dba6f12b",
    "metadata": {},
    "source": [
     "___\n",
-    "## Separate the data into groups"
+    "## <a id='toc1_6_'></a>[Separate the data into groups](#toc0_)"
    ]
   },
   {
@@ -1374,10 +1388,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "500ef450",
    "metadata": {},
    "source": [
-    "### publications"
+    "### <a id='toc1_6_1_'></a>[publications](#toc0_)"
    ]
   },
   {
@@ -1404,10 +1417,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a327e124",
    "metadata": {},
    "source": [
-    "### researchers"
+    "### <a id='toc1_6_2_'></a>[researchers](#toc0_)"
    ]
   },
   {
@@ -1432,10 +1444,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88499284",
    "metadata": {},
    "source": [
-    "### affiliations"
+    "### <a id='toc1_6_3_'></a>[affiliations](#toc0_)"
    ]
   },
   {
